<resources>
    <string name="app_name">MyQuizApplication</string>
    <string name="ans_b">Ans B</string>
    <string name="ans_c">Ans C</string>
    <string name="total_questions">Total Questions</string>
    <string name="ans_d">ans D</string>
    <string name="submit">Submit</string>
    <string name="ans_a">Ans A</string>
    <string name="this_will_be_the_question">This will be the question</string>
</resources>