 <?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24sp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_question"
        android:text="@string/total_questions"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:textStyle="bold"
        android:text="@string/this_will_be_the_question"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_margin="20sp"
        android:layout_above="@+id/choices_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices_layout"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_A"
            android:layout_margin="5sp"
            android:background="@color/black"
            android:text="@string/ans_a"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_B"
            android:layout_margin="5sp"
            android:background="@color/black"
            android:text="@string/ans_b"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_C"
            android:layout_margin="5sp"
            android:background="@color/black"
            android:text="@string/ans_c"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_D"
            android:layout_margin="5sp"
            android:background="@color/black"
            android:text="@string/ans_d"
            android:textColor="@color/white"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:text="@string/submit"
        android:layout_below="@+id/choices_layout"
        android:layout_marginTop="40sp"/>

</RelativeLayout>